fix : filter by nominalVoltages and substations
Signed-off-by: maissa SOUISSI <maissa.souissi@rte-france.com>